# Brazilian-E-Commerce-Data-Analysis

./: .env.example  .gitignore  README.md  config.py  olist_bi.pbit  pyproject.toml  requirement.txt
analytics/: analytics.py
api/: main.py
etl/: etl_pipeline.py
ml/: train_all.py
ml/churn/: churn_model.py
ml/delivery/: delay_model.py
ml/forecast/: sales_forecast.py
ml/sentiment/: sentiment_model.py
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_churn_analysis.ipynb  04_forecast_analysis.ipynb  05_delivery_analysis.ipynb  06_sentiment_analysis.ipynb
