[project]
name = "brazilian-e-commerce"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cmdstanpy==1.2.5",
    "fastapi==0.111.0",
    "imbalanced-learn>=0.14.2",
    "ipykernel==6.29.4",
    "joblib==1.4.2",
    "jupyter==1.0.0",
    "matplotlib==3.9.0",
    "mlflow==2.13.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pandas-stubs~=2.2.2",
    "plotly==5.22.0",
    "prophet==1.1.7",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
    "scikit-learn==1.5.0",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "sqlalchemy==2.0.30",
    "uvicorn==0.30.1",
    "xgboost==2.0.3",
]
